added logic to the layout.hbs file

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -17,7 +17,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark pt-4">
     <div class="container-fluid">
         <div class="logo">
-            <a class="navbar-brand" href="#"><img src="/images/1.1.png" width="150px" height="150px" alt="logo"></a>
+            <a class="navbar-brand" href="#"><img src="/images/batman.png" width="150px" height="150px" alt="logo"></a>
         </div>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +39,7 @@
         </div>
 
         <div class="logo">
-            <a class="navbar-brand" href="#"><img src="\images\1.2.png" width="150px" height="150px" alt="logo"></a>
+            <a class="navbar-brand" href="#"><img src="\images\spiderman.png" width="150px" height="150px" alt="logo"></a>
         </div>
     </div>
 </nav>
