modifying logic to the index.hbs

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -12,11 +12,11 @@
     <div class="container d-flex justify-content-evenly mt-5">
         <!-- Button trigger hero -->
         <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-hero">
-            🦸ADD HERO🦸
+            🦸ADD YOUR HERO🦸
         </button>
         <!-- Button trigger squad -->
         <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#modal-squad">
-            🦸ADD SQUAD🦸
+            🦸ADD YOUR SQUAD🦸
         </button>
     </div>
 
@@ -25,7 +25,7 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="staticBackdropLabel">ADD YOUR HERO BELOW</h5>
+                    <h5 class="modal-title" id="staticBackdropLabel">MODIFY YOUR OWN HERO BELOW</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
