modified the heroList.hbs file

--- a/src/main/resources/templates/heroList.hbs
+++ b/src/main/resources/templates/heroList.hbs
@@ -29,7 +29,7 @@
     {{else}}<!--no posts-->
     <div class="noHeroWarning text-center mt-4">
         <h5 class="text-danger">YOU DON`T HAVE ANY HEROES CREATED CURRENTLY</h5>
-        <button class="btn btn-danger text-white decoration-none mt-4"><a class="text-white text-decoration-none" href="/">Go back</a></button>
+        <button class="btn btn-danger text-white decoration-none mt-4"><a class="text-white text-decoration-none" href="/">RETURN</a></button>
     </div>
 
     {{/if}}
