--- a/src/main/resources/templates/heroSuccess.hbs
+++ b/src/main/resources/templates/heroSuccess.hbs
@@ -2,7 +2,7 @@
 
     <div class="card heroSuccessCard mx-auto d-flex justify-content-center align-items-center">
         <div class="card-body text-center">
-            <h5 class="card-title text-success">CONGRATS</h5>
+            <h5 class="card-title text-success">CONGRATS!!</h5>
             <p class="card-text">YOUR OWN CUSTOMIZED HERO HAS BEEN CREATED SUCCESSFULLY</p>
             <div class="heroButtons">
                 <button class="btn btn-dark btn-sm text-white decoration-none"><a class="text-white text-decoration-none" href="/">RETURN</a></button>
