--- a/src/main/resources/templates/squadSuccess.hbs
+++ b/src/main/resources/templates/squadSuccess.hbs
@@ -6,7 +6,7 @@
             <p class="card-text">YOUR SQUAD CREATION WAS ADDED CORRECTLY</p>
             <div class="heroButtons">
                 <button class="btn btn-dark btn-sm text-white decoration-none"><a class="text-white text-decoration-none" href="/">RETURN</a></button>
-                <button class="btn btn-dark btn-sm text-white decoration-none"><a class="text-white text-decoration-none" href="/squadList">SEE YOUR SQUAD CREATION</a></button>
+                <button class="btn btn-dark btn-sm text-white decoration-none"><a class="text-white text-decoration-none" href="/squadList.hbs">SEE YOUR SQUAD CREATION</a></button>
             </div>
         </div>
     </div>
